# sensors_evaluation

./: .gitignore  GAmain.py  Objects.py  README.md  RLmain.py  autel_evo_ll-pro_v3.py  cooperative_rl.py  cooperative_rl_union.py  cooperative_rl_union_obstacles_visualization.py  cooperative_rl_union_visualization.py  debug_fov_visualization.py  evo_nano.py  m300rtk.py  main.py  pyproject.toml  rl_part.py  saved_configuration.pkl.example
analysis/: solutions.txt
env/: RLEnv.py
genetic_algorithm/: evolution.py  fronts.py  metrics.py
models/: Objects.py  autel_evo_ll-pro_v3.py  dji_m30.py  evo_nano.py  m300rtk.py  mavic3pro.py
objects/: Objects.py  Types.py
ready_models/: abstract1.py  abstract2.py  abstract3.py  autel_evo_ll-pro_v3.py  dji_m30.py  mavic3pro.py
utils/: analysis.py  drawing.py  files_management.py  logging.py  parsing.py
