[project]
name = "sensors-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.3",
    "pillow>=11.3.0",
    "pygame>=2.6.1",
    "setuptools==81.0",
    "shapely>=2.1.1",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
]
